--- a/CRM/app/templates/login.html
+++ b/CRM/app/templates/login.html
@@ -59,6 +59,9 @@
         <h1>Customer Relationship Management APP</h1>
     </div>
     <h2>Login</h2>
+    {%if 'error'%}
+        <h1>{{error}}</h1>
+    {%endif%}
     <form action="{% url 'CRM:login' %}" method="post">
         {% csrf_token %}
         <label for="username">Username:</label><br>
@@ -68,5 +71,6 @@
         <input type="submit" value="Login">
     </form>
     <p>Don't have an account? <a href="{% url 'CRM:register' %}">Register here</a>.</p>
+    <p>Forgot password? Dont worry <a href="{%url 'CRM:reset'%}">Reset password</a></p>
 </body>
 </html>
